tests/fixtures/workflows/nested/invalid/recursive-a.invalid
export const meta = {
  name: "recursive-a",
  description: "Indirect recursion A"
};

return await workflow({ name: "recursive-b" });
